--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "feedback-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://feedback-app-backend-api.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -12,7 +13,9 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
+    "concurrently": "^7.0.0",
     "framer-motion": "^6.2.8",
+    "json-server": "^0.17.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
