--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "feedback-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://feedback-app-backend-api.herokuapp.com/",
+  "proxy": "https://feedback-app-backend-api.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
